<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/list_icon"
        android:contentDescription="@string/thumbnail_desc"
        android:scaleType="fitXY"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textColor="@color/item_name"
        android:layout_marginTop="16dp"
        android:text="@string/eat_more"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:layout_marginStart="5dp"
         />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fastfood_local_international"
        style="@style/SecondaryMediumText"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
         />

    <TextView
        android:id="@+id/opening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SecondaryMediumText"
        android:text="@string/open_on_all_sundays"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/description"
         />

    <TextView
        android:id="@+id/status1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed_now"
        style="@style/StatusRestaurantText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/opening"
        android:layout_marginStart="96dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        />

    <TextView
        android:id="@+id/status2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed_now"
        style="@style/StatusRestaurantText"
        app:layout_constraintLeft_toRightOf="@+id/status1"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/opening"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         />

    <TextView
        android:id="@+id/status3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/closed_now"
        style="@style/StatusRestaurantText"
        app:layout_constraintLeft_toRightOf="@+id/status2"
        app:layout_constraintTop_toBottomOf="@+id/opening"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        style="@style/RatingStyle"
        android:numStars="5"
        android:stepSize="1"
        android:rating="3"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="5dp"
        app:layout_constraintLeft_toRightOf="@+id/description"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:layout_width="576dp"
        android:layout_height="0.25dp"
        android:background="@color/item_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:id="@+id/view" />

</android.support.constraint.ConstraintLayout>